# Codebase-RAG

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentTrace.tsx  CRAGTrace.tsx  ChatPanel.tsx  EvalMetricsCard.tsx  GraphVisualization.tsx  PipelineComparison.tsx  QuestionDrillDown.tsx  SourceCard.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
scripts/: ask.py  crag_query.py  eval.py  ingest.py  query.py  serve.py
server/: eval_routes.py  main.py  models.py
src/: config.py
src/agents/: agent_graph.py  memory.py  state.py  tools.py
src/crag/: graders.py  graph.py  nodes.py  state.py
src/embeddings/: embedder.py
src/eval/: golden_qa.py  metrics.py  runner.py  store.py
src/graph/: builder.py  community_detection.py  community_summarizer.py  neo4j_client.py  schema.py
src/ingestion/: loaders.py  pipeline.py
src/observability/: langfuse_handler.py  tracer.py
src/qa/: chain.py  prompts.py
src/retrieval/: bm25_retriever.py  graph_retriever.py  hybrid_retriever.py  models.py  reranker.py  vector_retriever.py
src/routing/: decomposer.py  pipeline.py  router.py  step_back.py
tests/: test_agents.py  test_code_parser.py  test_community.py  test_crag.py  test_eval.py  test_eval_routes.py  test_eval_store.py  test_graph_builder.py  test_reranker.py  test_retrieval.py  test_routing.py  test_server.py
(+4 files in other folders)
