[project]
name = "code-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3",
  "langchain-groq>=0.2",
  "langchain-community>=0.3",
  "langchain-huggingface>=0.1",
  "langchain-neo4j>=0.1",
  "neo4j>=5.0",
  "sentence-transformers>=3.0",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "gitpython>=3.1",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "groq>=0.9",
  "tqdm>=4.0",
  "typer>=0.12",
  "rank-bm25>=0.2",
  "langgraph>=0.2",
  "langfuse>=2.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
